<?xml version="1.0" encoding="utf-8"?>

<!--
    SPDX-FileCopyrightText: NONE

    SPDX-License-Identifier: Unlicense
-->

<resources>
    <string name="app_name">WAdbSwitch</string>
    <string name="settings">Settings</string>
    <string name="permissions">Permissions</string>
    <string name="permission">Write secure system settings</string>
    <string name="required_permission">Required permission</string>
    <string name="security">Security</string>
    <string name="flag">Flag</string>
    <string name="click_to_copy">Click to copy</string>
    <string name="reset_flag">Reset flag</string>
</resources>

